menghilangkan onkeydown di line 982

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@ function startQuestion() {
             <button id="word4type3" class='selectable' " onclick='toggleSelected(this)'></button>
         </div></div></div></div>
 
-        <button style="display:block;" onclick='checkSelectedWords()' id='attack0' onkeydown="return event.key !== 'Enter'>Attack!</button>
+        <button style="display:block;" onclick='checkSelectedWords()' id='attack0'>Attack!</button>
 
         <div id = 'pop-up-trueFalse'>
             <div id="pop-up-trueProto" style="display: none;">
