menambahkan onkeydown di attack0
werjhgf

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@ function startQuestion() {
             <button id="word3type3" class='selectable' " onclick='toggleSelected(this)'></button>
             <button id="word4type3" class='selectable' " onclick='toggleSelected(this)'></button>
         </div></div></div></div>
-        <button style="display:block;" onclick='checkSelectedWords()' id='attack0'>Attack!</button>
+        <button style="display:block;" onclick='checkSelectedWords()' id='attack0' onkeydown="return event.key !== 'Enter'">Attack!</button>
         <div id = 'pop-up-trueFalse'>
             <div id="pop-up-trueProto" style="display: none;">
                 <!-- Latar Belakang Gelap (Overlay) -->
