--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     .input-container {
         display: flex;
@@ -86,7 +85,7 @@ Provinsimu: <input type="text" id="iprov" list="provs" placeholder="Provinsimu">
     <div class="index-accepted-header">
         <img src="/img/snbp.png" alt="Logo" class="index-accepted-header-icon" />
         <div class="index-accepted-header-title">
-            <h1 class="index-accepted-header-title-text">SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024</h1>
+            <h1 class="index-accepted-header-title-text">SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2023</h1>
         </div>
     </div>
     <div class="index-accepted-content">
@@ -180,9 +179,16 @@ Provinsimu: <input type="text" id="iprov" list="provs" placeholder="Provinsimu">
         var userInputColumn = ['inisn', 'inoreg', 'inama', 'iuniv', 'iprodi', 'ilink', 'idate', 'isch', 'iname-kab-kot', 'iprov']
         var outputSpan = ['nisn', 'noreg', 'name', 'univ', 'prodi', 'link', 'date', 'sch', 'name-kab-kot', 'prov']
         for(i = 0; i < userInputColumn.length; i++){
-            //var inputText = document.getElementById(userInputColumn[i]).value;
-            document.getElementById(outputSpan[i]).textContent = document.getElementById(userInputColumn[i]).value
+            var inputText = document.getElementById(userInputColumn[i]).value;
+            document.getElementById(outputSpan[i]).textContent = document.getElementById(userInputColumn[i]).value          
         }
+        let selectedDate = document.getElementById("idate").value
+        let dateParts = selectedDate.split('-')
+        let day = dateParts[2]
+        let month = dateParts[1]
+        let year = dateParts[0]
+        let formattedDate = day + "/" + month + "/" + year
+        document.getElementById("date").textContent = formattedDate
     }
     function generateRandom1() {
         const prefixes = ["004", "005", "006"]
