--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 </style>
 <script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
 <span class="abc">
-Made with &#10084; by <a href="github.com/anuGrahbodi" style="color: white;">Your Admirer || </a>
+Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer || </a>
 
 NISN: <input type="number" id="inisn" placeholder="NISN"><button onclick="generateRandom1()">Randomize NISN</button>
 
