--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@ Provinsimu: <input type="text" id="iprov" list="provs" placeholder="Provinsimu">
     }
     function alertAuthor(){
         var author = confirm('Author website ini adalah orang yang terjebak, anda juga? IG @anugrahspsb, Klik OK untuk ke IG. (instagram.com)')
-        if(comment){
+        if(author){
         window.location.href = "https://instagram.com/_u/anugrahspsb"
         }
     }
