--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<head><meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="google-site-verification" content="zgm08iBL8efXrHjCVn22h0-Km-rtadlNyLF7J1XJWB4" />
+</head>
 <style>
     .input-container {
         display: flex;
