--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="google-site-verification" content="zgm08iBL8efXrHjCVn22h0-Km-rtadlNyLF7J1XJWB4" />
+<meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
+    <body></body>
 </head>
 <style>
     .input-container {
