--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <head><meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
+<meta name="description" content="Fake lolos SNBP 2024 / Fake Generator SNBP 2024 for fun only." />
+  <meta name="keywords" content="Fake Generator SNBP, Fake SNBP, Generator SNBP, Fake lolos SNBP, Fake lulus SNBP, SNBP 2024, Fake SNBP 2024" />
     <body></body>
 </head>
 <style>
