--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
 <meta name="description" content="Fake lolos SNBP 2024 / Fake Generator SNBP 2024 for fun only." />
   <meta name="keywords" content="Fake Generator SNBP, Fake SNBP, Generator SNBP, Fake lolos SNBP, Fake lulus SNBP, SNBP 2024, Fake SNBP 2024" />
+  <title>Fake lolos SNBP / Generator SNBP 2024</title>
     <body></body>
 </head>
 <style>
