--- a/index.html
+++ b/index.html
@@ -128,4 +128,4 @@
           <p class="index-accepted-footer-paragraph">Khusus peserta KIP Kuliah, PTN tujuan juga dapat melakukan verifikasi data ekonomi dan/atau kunjungan ke tempat tinggal Anda sebelum menetapkan status penerimaan Anda.</p>
         </div>
       </div>
-      <script src="js_snbp.js"></script>
+      <script src="js_snbp.js, qrgen.js"></script>
