--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
-        <meta name="description" content="Fake lolos SNBP 2024 / Fake Generator SNBP 2024 / SNMPTN For Fun Only. SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024." />
-        <meta name="keywords" content="Fake Generator SNBP, Fake SNBP, Generator SNBP, Fake lolos SNBP, Fake lulus SNBP, SNBP 2024, Fake SNBP 2024, Fake SNMPTN, Generator SNMPTN" />
-        <title>Fake lolos SNBP / Generator SNBP 2024</title>
+        <meta name="description" content="Fake / Template lolos SNBP 2024 / Fake Generator SNBP 2024 / SNMPTN For Fun Only. SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024. Silakan lakukan pendaftaran ulang. Status penerimaan Anda sebagai mahasiswa akan ditetapkan setelah PTN tujuan melakukan verifikasi data akademik (rapor dan/atau portofolio)." />
+        <meta name="keywords" content="generator snbp, template snbp, template snbp 2024, fake snbp, fake generator snbp, fake lolos snbp, fake lulus snbp, snbp 2024, fake snbp 2024, fake snmptn, generator snmptn, template snmptn, fake snbp anugrahbodi, selamat! anda dinyatakan lulus seleksi snbp 2024" />
+        <title>Fake lolos SNBP / Generator SNBP / Template SNBP 2024</title>
       <body></body>
       </head>
       <span id="blocks">
@@ -81,7 +81,6 @@
             <div class="index-accepted-content-upper-qr" alt="QR" id="index-accepted-qr" style="background-color: white; border-left: 10px solid white; border-top: 10px solid white; border-bottom: 10px solid white; justify-content: center; ">
               <span id="qrcode5"></span>
             </div>
-            <!--img class="index-accepted-content-upper-qr" alt="QR" id="index-accepted-qr" src="https://static.vecteezy.com/system/resources/previews/002/557/391/large_2x/qr-code-for-scanning-free-vector.jpg"/-->
           </div>
           <div class="index-accepted-content-lower">
             <div class="index-accepted-content-lower-column index-accepted-content-lower-column-25">
