--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
         <button onclick="alertAuthor()">Author</button>
         <button onclick="alertTutorial()">TUTORIAL</button>
         <button onclick="goComment()">Kasih Komentar</button>
+        <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
         <button onclick="hideMenu()">Sembunyikan Menu</button>
+          <br/>
+        <div id="latch-screen">
+        </div>
       </span>
       <link rel="stylesheet" href="css-snbp.css" />
       <link rel="stylesheet" href="css2-snbp.css" />
