--- a/index.html
+++ b/index.html
@@ -1,135 +1,88 @@
-    <!DOCTYPE html>
-    <html lang="id">
-      <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
-        <meta name="description" content="Fake / Template lolos SNBP 2024 / Fake Generator SNBP 2024 / SNMPTN For Fun Only. SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024. Silakan lakukan pendaftaran ulang. Status penerimaan Anda sebagai mahasiswa akan ditetapkan setelah PTN tujuan melakukan verifikasi data akademik (rapor dan/atau portofolio)." />
-        <meta name="keywords" content="generator snbp, template snbp, template snbp 2024, fake snbp, fake generator snbp, fake lolos snbp, fake lulus snbp, snbp 2024, fake snbp 2024, fake snmptn, generator snmptn, template snmptn, fake snbp anugrahbodi, selamat! anda dinyatakan lulus seleksi snbp 2024" />
-        <title>Fake lolos SNBP / Generator SNBP / Template SNBP 2024</title>
-      <body></body>
-      </head>
-      <span id="blocks">
-        <span class="abc"> Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer </a>|| </br>
-          </br> NISN: <input type="number" id="inisn" placeholder="NISN">
-          <button onclick="generateRandom1()">Randomize NISN</button>
-          </br> Nomor Registrasi: <input type="number" id="inoreg" placeholder="Nomor Registrasi">
-          <button onclick="generateRandom2()">Randomize NoReg</button>
-          </br> Namamu: <input type="text" id="inama" placeholder="Your Admirer">
-          </br> Nama Kampus: <input type="text" id="iuniv" list="univs" placeholder="Nama Kampus">
-          </br> Jurusan: <input type="text" id="iprodi" list="jurusans" placeholder="Jurusan">
-          </br> Jenjang: <select id="dropdownBoxes">
-            <option>--choose--</option>
-            <option value="cc">S1</option>
-            <option value="dd">D4</option>
-            <option value="ee">D3</option>
-            <option value="ff">D2</option>
-            <option value="gg">D1</option>
-          </select>
-          </br> Link penerimaan kampus: <input type="text" id="ilink" placeholder="penerimaan.mit.ac.id">
-          <button onclick="alertLink()">Link</button>
-          </br> Tanggal Lahir: <input type="date" id="idate" name="Tanggal Lahirmu">
-          </br> Asal Sekolah: <input type="text" id="isch" placeholder="SMAN 1 Gotham">
-          </br>
-          <!-- drop bar Kabupaten/ Kota--> Anda tinggal di: <select id="kabBoxes">
-            <option>--choose--</option>
-            <option value="aa">Kabupaten</option>
-            <option value="bb">Kota</option>
-          </select>
-          </br> Kabupaten/ Kotamu: <input type="text" id="iname-kab-kot" list="kabKots" placeholder="Kab/kot">
-          </br> Provinsimu: <input type="text" id="iprov" list="provs" placeholder="Provinsimu">
-          </br>
-        </span>
-        <datalist id="univs"></datalist>
-        <datalist id="jurusans"></datalist>
-        <datalist id="kabKots"></datalist>
-        <datalist id="provs"></datalist>
-        </br>
-        <button onclick="displayInput(); generateQRCode();">GENERATE</button>
-        <button onclick="alertNote()">Note</button>
-        <button onclick="alertFeedback()">Feedback</button>
-        <button onclick="alertAuthor()">Author</button>
-        <button onclick="alertTutorial()">TUTORIAL</button>
-        <button onclick="goComment()">Kasih Komentar</button>
-        <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
-        <button onclick="hideMenu()">Sembunyikan Menu</button>
-          <br/>
-        <div id="latch-screen">
-        </div>
+<!DOCTYPE html>
+<html lang="id">
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
+    <meta name="description" content="SNBP Generator 2024 | Fake Lolos/ Gagal | Template Lolos SNBP 2024 |SNMPTN For Fun Only. SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024. Silakan lakukan pendaftaran ulang. Status penerimaan Anda sebagai mahasiswa akan ditetapkan setelah PTN tujuan melakukan verifikasi data akademik (rapor dan/atau portofolio)." />
+    <meta name="keywords" content="snbp generator, template snbp, template snbp 2024, fake snbp, fake generator snbp, fake lolos snbp, fake lulus snbp, snbp 2024, fake snbp 2024, fake snmptn, generator snmptn, template snmptn, fake tidak lolos snbp, generator snbp gagal, fake snbp anugrahbodi, selamat! anda dinyatakan lulus seleksi snbp 2024, anugrahbodi" />
+    <title>SNBP Generator 2024 | Fake Lolos/Tidak Lolos SNBP | Template SNBP 2024</title>
+  <body></body>
+  </head>
+  <span id="blocks">
+    <span class="abc"> Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer </a>|| </br>
+      </br> Mode :    <button id="toggleRedBlue" onclick="changeKabKot()">Lulus/ biru</button><br/>
+      </br> NISN</br><input type="number" id="inisn" placeholder="NISN">
+      <button onclick="generateRandom1()">Randomize NISN</button>
+      </br> Nomor Registrasi </br><input type="number" id="inoreg" placeholder="Nomor Registrasi">
+      <button onclick="generateRandom2()">Randomize NoReg</button>
+      </br> Namamu </br><input type="text" id="inama" placeholder="Your Admirer">
+      <span id="redm">
+      </br> Nama Kampus </br><input type="text" id="iuniv" list="univs" placeholder="Nama Kampus">
+      </br> Program Studi </br><select id="dropdownBoxes">
+        <option>--jenjang--</option>
+        <option value="S!">S1</option>
+        <option value="D4">D4</option>
+        <option value="D3">D3</option>
+        <option value="D2">D2</option>
+        <option value="D1">D1</option>
+      </select><input type="text" id="iprodi" list="jurusans" placeholder="Jurusan">
+      </br> Link penerimaan kampus <br/><input type="text" id="ilink" placeholder="https://penerimaan.mit.ac.id">
+      <button onclick="alertLink()">Link</button>
       </span>
-      <link rel="stylesheet" href="css-snbp.css" />
-      <link rel="stylesheet" href="css2-snbp.css" />
-      <div id="index-accepted" class="index-accepted">
-        <div class="index-accepted-header">
-          <img src="snbp.png" alt="Logo" class="index-accepted-header-icon" onclick="showMenu()" />
-          <div class="index-accepted-header-title">
-            <h1 class="index-accepted-header-title-text">SELAMAT! ANDA DINYATAKAN LULUS SELEKSI SNBP 2024</h1>
-          </div>
-        </div>
-        <div class="index-accepted-content">
-          <div class="index-accepted-content-upper">
-            <div class="index-accepted-content-upper-bio">
-              <span class="index-accepted-content-upper-bio-nisn" id="index-accepted-nisn">NISN <span id="nisn"></span> - NOREG <span id="noreg"></span>
-              </span>
-              <span class="index-accepted-content-upper-bio-name" id="index-accepted-name">
-                <span id="name"></span>
-              </span>
-              <span class="index-accepted-content-upper-bio-program" id="index-accepted-program">
-                <span id="prodi"></span>&nbsp;(<span id="jenjang"></span>) </span>
-              <span class="index-accepted-content-upper-bio-university" id="index-accepted-university">
-                <span id="univ"></span>
-              </span>
-            </div>
-            <div class="index-accepted-content-upper-qr" alt="QR" id="index-accepted-qr" style="background-color: white; border-left: 10px solid white; border-top: 10px solid white; border-bottom: 10px solid white; justify-content: center; ">
-              <span id="qrcode5"></span>
-            </div>
-          </div>
-          <div class="index-accepted-content-lower">
-            <div class="index-accepted-content-lower-column index-accepted-content-lower-column-25">
-              <div class="index-accepted-content-lower-column-field">
-                <span class="index-accepted-content-lower-column-field-caption">Tanggal Lahir</span>
-                <span class="index-accepted-content-lower-column-field-value" id="index-accepted-birthday">
-                  <span id="date"></span>
-                </span>
-              </div>
-              <div class="index-accepted-content-lower-column-field">
-                <span class="index-accepted-content-lower-column-field-caption">Asal Sekolah</span>
-                <span class="index-accepted-content-lower-column-field-value" id="index-accepted-school">
-                  <span id="sch"></span>
-                </span>
-              </div>
-            </div>
-            <div class="index-accepted-content-lower-column index-accepted-content-lower-column-25">
-              <div class="index-accepted-content-lower-column-field">
-                <span class="index-accepted-content-lower-column-field-caption">Kabupaten/Kota</span>
-                <span class="index-accepted-content-lower-column-field-value" id="index-accepted-regency">
-                  <span id="kab-kot"></span>
-                  <span id="name-kab-kot"></span>
-                </span>
-              </div>
-              <div class="index-accepted-content-lower-column-field">
-                <span class="index-accepted-content-lower-column-field-caption">Provinsi</span>
-                <span class="index-accepted-content-lower-column-field-value" id="index-accepted-province">Prov. <span id="prov"></span>
-                </span>
-              </div>
-            </div>
-            <div class="index-accepted-content-lower-column index-accepted-content-lower-column-50">
-              <div class="index-accepted-content-lower-column-note">
-                <span class="index-accepted-content-lower-column-note-title">Silakan lakukan pendaftaran ulang.</span>
-                <span class="index-accepted-content-lower-column-note-subtitle">Informasi pendaftaran ulang di PTN/Politeknik Negeri dapat dilihat pada link berikut:</span>
-                <a href="https://google.com" target="_blank" class="index-accepted-content-lower-column-note-link" id="index-accepted-link">
-                  <span id="link"></span>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="index-accepted-footer">
-          <p class="index-accepted-footer-paragraph">Status penerimaan Anda sebagai mahasiswa akan ditetapkan setelah PTN tujuan melakukan verifikasi data akademik (rapor dan/atau portofolio). Silakan Anda membaca peraturan tentang penerimaan mahasiswa baru di laman PTN tujuan. </p>
-          <p class="index-accepted-footer-paragraph">Khusus peserta KIP Kuliah, PTN tujuan juga dapat melakukan verifikasi data ekonomi dan/atau kunjungan ke tempat tinggal Anda sebelum menetapkan status penerimaan Anda.</p>
-        </div>
-      </div>
-      <script src="qrgen.js"></script>
-      <script src="js_snbp.js"></script>
+      </br> Tanggal Lahir <br/><input type="date" id="idate" name="Tanggal Lahirmu">
+      </br> Asal Sekolah <br/><input type="text" id="isch" placeholder="SMAN 1 Gotham">
+      </br>
+      Anda tinggal di <br/><select id="kabBoxes">
+        <option>--cat--</option>
+        <option value="aa">Kabupaten</option>
+        <option value="bb">Kota</option>
+      </select><input type="text" id="iname-kab-kot" list="kabKots" placeholder="Kab/kot">
+      </br> Provinsimu <br/><input type="text" id="iprov" list="provs" placeholder="Provinsimu">
+      </br>
+    </span>
+    <datalist id="univs"></datalist>
+    <datalist id="jurusans"></datalist>
+    <datalist id="kabKots"></datalist>
+    <datalist id="provs"></datalist>
+    </br>
+    <button onclick="displayInput(); generateQRCode();">GENERATE</button>
+    <button onclick="alertNote()">Note</button>
+    <button onclick="alertFeedback()">Feedback</button>
+    <button onclick="alertAuthor()">Author</button>
+    <button onclick="alertTutorial()">TUTORIAL</button>
+    <button onclick="goComment()">Kasih Komentar</button>
+    <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
+    <button onclick="hideMenu()">Sembunyikan Menu</button>
+      <br/>
+    <div id="latch-screen">
+    </div>
+  </span>
+  <link rel="stylesheet" href="css-snbp.css" />
+  <link rel="stylesheet" href="css2-snbp.css" />
+
+  <body id="body"><div id="main" class="main">
+    <div id="main-route" class="main-route"><div id="index" class="index">  
+        </div></div></div>
+  <script src="qrgen.js"></script>
+  <script src="js_snbp.js"></script>
+  <script>
+        document.getElementById('dropdownBoxes').addEventListener('change', function() {
+            document.getElementById('jenjang').textContent = this.value
+        })
+        document.getElementById('kabBoxes').addEventListener('change', function() {
+            changeKabKot()
+        })
+        function changeKabKot() {
+        setTimeout(function() {
+        if (document.getElementById('kabBoxes').value === 'aa') {
+            document.getElementById('kab-kot').textContent = 'Kab.';
+        } else if (document.getElementById('kabBoxes').value === 'bb') {
+            document.getElementById('kab-kot').textContent = 'Kota';
+        }
+        }.bind(this), 1);
+        }
+  </script>
+</body></html>
