--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </br> Nama Kampus </br><input type="text" id="iuniv" list="univs" placeholder="Nama Kampus">
       </br> Program Studi </br><select id="dropdownBoxes">
         <option>--jenjang--</option>
-        <option value="S!">S1</option>
+        <option value="S1">S1</option>
         <option value="D4">D4</option>
         <option value="D3">D3</option>
         <option value="D2">D2</option>
