--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body></body>
   </head>
   <span id="blocks">
-    <span class="abc"> Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer </a>|| </br>
+    <span class="abc"> Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer </a>|| SNBP GENERATOR 2024</br>
       </br> Mode :    <button id="toggleRedBlue" onclick="changeKabKot()">Lulus/ biru</button><br/>
       </br> NISN</br><input type="number" id="inisn" placeholder="NISN">
       <button onclick="generateRandom1()">Randomize NISN</button>
