--- a/snbt-generator/index.html
+++ b/snbt-generator/index.html
@@ -2,14 +2,14 @@
 <html lang="id">
 
 <head>
-    <title>SNBT - UTBK Generator 2024 | Fake Lulus / Gagal SNBT 2024 </title>
+    <title>SNBT - UTBK Generator 2024 | SNBT Fake 2024 Lulus / Gagal</title>
     <base href="https://anugrahbodi.github.io/" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
-    <meta name="description" content="SNBT Generator 2024 | Fake Lolos / Gagal | Template SNBT 2024 |SBMPTN For Fun Only. Selamat! Anda dinyatakan lulus seleksi SNBT SNPMB 2024." />
+    <meta name="description" content="SNBT Generator 2024 | Fake Lolos / Gagal | Template SNBT 2024 | SBMPTN For Fun Only. Selamat! Anda dinyatakan lulus seleksi SNBT SNPMB 2024." />
     <meta name="keywords" content="snbt generator, template snbt, template snbt 2024, fake snbt, fake generator snbt, fake lolos snbt, fake lulus snbt, snbt utbk 2024, fake snbt 2024, fake sbmptn, generator sbmptn, template sbmptn, fake tidak lolos snbt, generator snbt gagal, fake snbt anugrahbodi, selamat! anda dinyatakan lulus seleksi snbt 2024, anugrahbodi" />
     <link rel="stylesheet" href="css2-snbp.css" />
     <link rel="stylesheet" href="bootstrap.min.css" />
