--- a/snbt-generator/index.html
+++ b/snbt-generator/index.html
@@ -18,37 +18,60 @@
 
 <body>
     <span id="blocks">
-        <span class="abc"> Made with &#10084; by <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer </a>|| <strong>SNBT GENERATOR 2024</strong></br>
-        </br> Mode :    <button id="toggleRedBlue" onclick="changeKabKot()">Lulus/ biru</button><br/><br>
-        Nomor Peserta <br/><input type="text" id="inope" placeholder="Nomor Peserta"/><button onclick="generateNumbers()">Randomize Nomor Peserta</button>
-        </br>
-        Namamu <br/><input type="text" id="iname" placeholder="Your Admirer"/>
-        <span id="redm">
-        </br> Tanggal Lahir <br/><input type="date" id="idate" name="Tanggal Lahirmu">
-        <br/>Kode Kampus - Nama Kampus </br>
-        <input type="text" id="iunivcode" placeholder="3 digit" style="width:100px;" oninput="copyCode()"/> - <input type="text" id="iuniv" placeholder="Nama Kampus" list="univs"/>
-        <br/>Kode Prodi  &nbsp;  &nbsp;  &nbsp;- Nama Prodi
-        <br/><span id="cloneKampusCode">000</span>
-    <input type="text\" id="iprodicode" placeholder="3 digit" style="width:75px; text-align: center;" /> -
-    <input type="text" id="iprodi" placeholder="Program Studi" list="jurusans" />
-    <br/>
-    <button onclick="alertCode()">Kode kampus/ prodi</button>
-    <br/>Pesan KIP Kuliah :
-    <button id="kip" onclick="toggleAct()" style="color: red">Aktif</button>
-    <datalist id="univs"></datalist>
-    <datalist id="jurusans"></datalist>
-    </span>
-    <br/> Jika ukuran QRcode tidak sesuai, GENERATE ulang.
-    </span>
+        <span class="abc">
+            Made with &#10084; by 
+            <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer</a> || 
+            <strong>SNBT GENERATOR 2024</strong>
+            <br><br>
+            Mode : <button id="toggleRedBlue" onclick="changeKabKot()" class="nocss">Lulus/ biru</button>
+            <br>
+            <div class="containers">
+              <label class="custom-label" for="inope">Nomor Peserta</label>
+              <input class="custom-input" type="text" id="inope" placeholder="Nomor Peserta"/>
+            </div>
+            <button onclick="generateNumbers()">Randomize Nomor Peserta</button>
+            <div class="containers">
+              <label class="custom-label" for="iname">Namamu</label>
+              <input class="custom-input" type="text" id="iname" placeholder="Your Admirer"/>
+            </div>
+            <span id="redm">
+              <div class="containers">
+                <label class="custom-label" for="idate">Tanggal Lahir</label>
+                <input class="custom-input" type="date" id="idate" name="Tanggal Lahirmu">
+              </div>
+              <div class="containers">
+                <label class="custom-label" for="iunivcode">Kode Kampus - Nama Kampus</label>
+                <div class="inline-container">
+                <input class="custom-input" type="text" id="iunivcode" placeholder="3 digit" style="width:100px;" oninput="copyCode()"/> - 
+                <input class="custom-input" type="text" id="iuniv" placeholder="Nama Kampus" list="univs"/>
+              </div>
+              </div>
+              <div class="containers">
+                <label class="custom-label" for="iprodicode">Kode Prodi - Nama Prodi</label>
+                <div class="inline-container">
+                <input class="custom-input" type="text" id="iprodicode" placeholder="3 digit" style="width:75px; text-align: center;" /> - 
+                <input class="custom-input" type="text" id="iprodi" placeholder="Program Studi" list="jurusans" />
+              </div>
+              </div>
+              <button onclick="alertCode()">Kode kampus/ prodi</button>
+              <br>
+              <br>Pesan KIP Kuliah :
+              <button id="kip" onclick="toggleAct()" style="color: red">Aktif</button>
+              <datalist id="univs"></datalist>
+              <datalist id="jurusans"></datalist>
+            </span>
+            <br> Jika ukuran QRcode tidak sesuai, GENERATE ulang.
+          </span>
+          
     </br>
     </br>
-    <button onclick="displayOutput(); generateQRCode();">GENERATE</button>
+    <button class="nocss black" onclick="displayOutput(); generateQRCode();">GENERATE</button>
     <button onclick="alertNote()">Note</button>
     <button onclick="alertFeedback()">Feedback</button>
     <button onclick="alertAuthor()">Author</button>
     <button onclick="alertTutorial()">TUTORIAL</button>
     <button onclick="goComment()">Kasih Komentar</button>
-    <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
+    <button onclick="playLatch()">&#9658 Now I've got you in my space (add/rmv)</button>
     <button onclick="hideMenu()">Sembunyikan Menu</button>
     <br/>
     <div id="latch-screen">
@@ -56,5 +79,5 @@
     </span>
 
     <span id="index" style="justify-content: center;"></span>
-    <script src="qrgen2.js"></script>
+    <script src="qrgen2.js"></script> 
     <script src="js_snbt.js"></script>
