--- a/html.html
+++ b/html.html
@@ -9,7 +9,7 @@
             window.open('https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io', '_self');
         }
 
-        window.onload = openGoogle;
+        //window.onload = openGoogle;
     </script>
 </head>
 <body>
