--- a/html.html
+++ b/html.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Google</title>
-    <script type="text/javascript">
-        function openGoogle() {
-            window.open('https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io', '_self');
-        }
-
-        //window.onload = openGoogle;
-    </script>
-</head>
-<body>
-    <p>If you are not redirected automatically, <a href="https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io">click here</a>.</p>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Open Link in Browser</title><style>*{font-size:2px;}#openLinkButton{background-color:#4CAF50;border:none;color:white;padding:5px 12px;text-align:center;text-decoration:none;display:inline-block;font-size:5px;margin:4px 2px;cursor:pointer;}</style></head><body><button id="openLinkButton" onclick="clicked()">SNBT - UTBK GENERATOR</button><p>If you are not redirected automatically,<a href="https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io">click here</a>.</p><script>function clicked(){const url="https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io";const userAgent=navigator.userAgent.toLowerCase();if(userAgent.includes("iphone")||userAgent.includes("ipad")){window.location.href="https://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io"}else if(userAgent.includes("android")){const intentUri="intent://www.google.com/search?q=snbt+2024+generator+github+site%3Agithub.io#Intent;package=com.android.chrome;scheme=https;end";window.location.href=intentUri}else{window.location.href=url}}window.onload=clicked</script></body></html>
