Update index.html 1014

--- a/snbt-generator/index.html
+++ b/snbt-generator/index.html
@@ -2,15 +2,15 @@
 <html lang="id">
 
 <head>
-    <title>SNBT - UTBK Generator 2024 | SNBT Fake 2024 Lulus / Gagal</title>
+    <title>SNBT - UTBK Generator 2025 | SNBT Fake 2025 Lulus / Gagal</title>
     <base href="https://anugrahbodi.github.io/" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="google-site-verification" content="6iGJm9FhpM5PaGmKB2ocmh_lD8G87wqhUcNdMAmRuqU" />
-    <meta name="description" content="SNBT Generator 2024 | Fake Lolos / Gagal | Template SNBT 2024 | SBMPTN For Fun Only. Selamat! Anda dinyatakan lulus seleksi SNBT SNPMB 2024." />
-    <meta name="keywords" content="snbt generator, template snbt, template snbt 2024, fake snbt, fake generator snbt, fake lolos snbt, fake lulus snbt, snbt utbk 2024, fake snbt 2024, fake sbmptn, generator sbmptn, template sbmptn, fake tidak lolos snbt, generator snbt gagal, fake snbt anugrahbodi, selamat! anda dinyatakan lulus seleksi snbt 2024, anugrahbodi" />
+    <meta name="description" content="SNBT Generator 2025 | Fake Lolos / Gagal | Template SNBT 2025 | SBMPTN For Fun Only. Selamat! Anda dinyatakan lulus seleksi SNBT SNPMB 2025." />
+    <meta name="keywords" content="snbt generator, template snbt, template snbt 2025, fake snbt, fake generator snbt, fake lolos snbt, fake lulus snbt, snbt utbk 2025, fake snbt 2025, fake sbmptn, generator sbmptn, template sbmptn, fake tidak lolos snbt, generator snbt gagal, fake snbt anugrahbodi, selamat! anda dinyatakan lulus seleksi snbt 2025, anugrahbodi" />
     <link rel="stylesheet" href="css2-snbp.css" />
     <link rel="stylesheet" href="bootstrap.min.css" />
     <link rel="stylesheet" href="css-snbt.css" />
@@ -21,9 +21,11 @@
         <span class="abc">
             Made with &#10084; by 
             <a href="https://github.com/anuGrahbodi" style="color: white;">Your Admirer</a> || 
-            <strong>SNBT GENERATOR 2024</strong>
+            <strong>SNBT GENERATOR 2025</strong>
             <br><br>
             Mode : <button id="toggleRedBlue" onclick="changeKabKot()" class="nocss">Lulus/ biru</button>
+            <br>
+            </br> Tahun : <input type="number" placeholder="2024/2025/2026" value="2025" onInput="updateThnText(this.value)">
             <br>
             <div class="containers">
               <label class="custom-label" for="inope">Nomor Peserta</label>
