--- a/snbt-generator/index.html
+++ b/snbt-generator/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <title>SNBT - UTBK Generator 2025 | SNBT Fake 2025 Lulus / Gagal</title>
-    <base href="https://anugrahbodi.github.io/" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4079479040912824"
+     crossorigin="anonymous"></script>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
