--- a/snbt-generator/index.html
+++ b/snbt-generator/index.html
@@ -5,6 +5,7 @@
     <title>SNBT - UTBK Generator 2025 | SNBT Fake 2025 Lulus / Gagal</title>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4079479040912824"
      crossorigin="anonymous"></script>
+    <base href="https://anugrahbodi.github.io/">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
