--- a/intent.html
+++ b/intent.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intent</title>
   <script>
-    function openURL() {
+    function setDynamicLink() {
       const params = new URLSearchParams(window.location.search)
       const targetURL = params.get("q")
 
@@ -13,24 +13,13 @@
       if (targetURL) {
         linkElement.href = targetURL
         linkElement.textContent = targetURL
-
-        const userAgent = navigator.userAgent || navigator.vendor || window.opera
-
-        if (/android/i.test(userAgent)) {
-          const chromeIntent = `intent:${targetURL}#Intent;package=com.android.chrome;scheme=https;end`
-          window.location.href = chromeIntent
-        } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-          window.location.href = targetURL
-        } else {
-          window.location.href = targetURL
-        }
       } else {
         alert("No URL provided in the query parameter `q` Skibidi Sigma Grindset")
         linkElement.textContent = "No URL Provided"
       }
     }
 
-    window.onload = openURL
+    window.onload = setDynamicLink
   </script>
 </head>
 <body>
