--- a/intent.html
+++ b/intent.html
@@ -5,24 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Intent</title>
   <script>
-    function setDynamicLink() {
-      const params = new URLSearchParams(window.location.search)
-      const targetURL = params.get("q")
-
-      const linkElement = document.getElementById("dynamicLink")
-      if (targetURL) {
-        linkElement.href = targetURL
-        linkElement.textContent = targetURL
-      } else {
-        alert("No URL provided in the query parameter `q` Skibidi Sigma Grindset")
-        linkElement.textContent = "No URL Provided"
-      }
+    function redirect() {
+      window.location.href = params.get("q")
     }
 
-    window.onload = setDynamicLink
+    function openURL() {
+      const params = new URLSearchParams(window.location.search)
+
+      const chromeIntent = `intent:${params.get("q")}#Intent;package=com.android.chrome;scheme=https;end`
+      window.location.href = chromeIntent
+        
+      redirect()
+    }
+
+    window.onload = openURL
   </script>
 </head>
 <body>
-  <a id="dynamicLink" href="#">Loading link...</a>
+  <p>If not redirected automatically, click <a onclick="redirect(targetURL)">here.</a>
+  </p>
 </body>
 </html>
