--- a/intent.html
+++ b/intent.html
@@ -22,7 +22,7 @@
   </script>
 </head>
 <body>
-  <p>If not redirected automatically, click <a onclick="redirect(targetURL)">here.</a>
+  <p>If not redirected automatically, click <u><a onclick="redirect()">here</a></u>.
   </p>
 </body>
 </html>
