--- a/intent.html
+++ b/intent.html
@@ -22,7 +22,7 @@
   </script>
 </head>
 <body>
-  <p>If not redirected automatically, click <u><span onclick="redirect()">here</span></u>.
+  <p>If not redirected automatically, click <u><button onclick="redirect()">here</button></u>.
   </p>
 </body>
 </html>
