--- a/intent.html
+++ b/intent.html
@@ -6,7 +6,7 @@
   <title>Intent</title>
   <script>
     function redirect() {
-      window.location.href = params.get("q")
+      window.location.href = `https://${params.get("q")}`
     }
 
     function openURL() {
