--- a/intent.html
+++ b/intent.html
@@ -22,7 +22,6 @@
   </script>
 </head>
 <body>
-  <p>If not redirected automatically, click <u><button onclick="redirect()">here</button></u>.
-  </p>
+  <p>If not redirected automatically, click <u><a href="https://google.com">here</a></u>.</p>
 </body>
 </html>
