--- a/panduan-umum-pkm/index.html
+++ b/panduan-umum-pkm/index.html
@@ -39,12 +39,12 @@
 </head>
 <body>
     <p>
-        <h1>Buku Panduan Umum PKM 2025: PKM KC, PKM PM, PKM RSH, PKM RE, PKM PI, PKM K, PKM VGK, PKM KI, PKM GFT, PKM AI</h1>
+        <h1>Panduan Umum PKM 2025: PKM KC, PKM PM, PKM RSH, PKM RE, PKM PI, PKM K, PKM VGK, PKM KI, PKM GFT, PKM AI</h1>
         <h1>Bukan website resmi. Ok? BUKAN WEBSITE RESMI.</h1>
         <button onclick="if (confirm('Yuk, berikan komentar Kamu mengenai pedoman PKM 2025 (Show Username IG Bro :D)')) { window.open('https://secreto.site/aer5t7', '_blank'); }">
             Beri Komentar tentang Panduan Umum PKM 2025 (Klik)
         </button>
-    <p>Buku Panduan PKM 2025 ini disusun sebagai dasar pelaksanaan Program Kreativitas Mahasiswa (PKM) tahun 2025. Secara keseluruhan, buku panduan ini terdiri dari 11 buku, yaitu:</p>
+    <p>Buku panduan PKM 2025 ini disusun sebagai dasar pelaksanaan Program Kreativitas Mahasiswa (PKM) tahun 2025. Secara keseluruhan, buku panduan ini terdiri dari 11 buku, yaitu:</p>
     
     <ol>
         <li><strong>Buku Panduan Umum</strong> yang berisi petunjuk umum.</li>
