--- a/panduan-umum-pkm/index.html
+++ b/panduan-umum-pkm/index.html
@@ -12,30 +12,7 @@
   <meta name="keywords"
     content="pedoman pkm, panduan pkm, pedoman pkm 2025, panduan umum pkm, pedoman umum pkm, pedoman umum pkm 2025, panduan umum pkm 2025, pedoman pkm kc, panduan pkm pm, pedoman pkm re, panduan pkm k, panduan pkm vgk, panduan pkm rsh, panduan pkm pi, panduan pkm ki, panduan pkm gft, panduan pkm ai" />
   <title>Panduan Umum PKM 2025 | Pedoman PKM 2025 | Pedoman PKM | Panduan PKM</title>
-  <style>
-    body {
-        background-color: #010020;
-        color: #e0e0e0;
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 20px;
-    }
-    h1, h2 {
-        color: #f0f0f0;
-    }
-    p, li {
-        line-height: 1.6;
-    }
-    ol, ul {
-        margin-left: 20px;
-    }
-    strong {
-        color: #ffcc00;
-    }
-    button {
-        background-color: yellowgreen;
-    }
-</style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>
@@ -76,6 +53,6 @@
     <p>Jika terdapat hal-hal yang belum tertulis dalam buku ini, informasi lebih lanjut akan disampaikan kemudian.</p>
     </p>
 </body>
-
-
+<script src="script.js"></script>
+<script src="https://www.youtube.com/iframe_api"></script>
 </html>
